<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:id="@+id/neighbour_profil_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.design.widget.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:layout_scrollInterpolator="@android:anim/decelerate_interpolator"
            app:toolbarId="@+id/toolbar">

            <ImageView
                android:id="@+id/app_bar_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@android:drawable/sym_def_app_icon"
                />

            <TextView
                android:id="@+id/neighbour_name_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:layout_gravity="bottom"
                android:text="@string/neigbour_user_name"
                android:textSize="32sp"
                android:textColor="@color/white"
                />

            <ImageButton
                android:id="@+id/back_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:src="@drawable/ic_keyboard_backspace_black_24dp"
                android:background="@android:color/transparent"
                android:tint="@color/white"
                />

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/add_fav_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="270dp"
        android:layout_marginEnd="12dp"
        android:backgroundTint="@color/white"
        android:clickable="true"
        android:src="@drawable/ic_star_border_white_24dp"
        app:backgroundTint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        />

    <android.support.v7.widget.CardView
        android:id="@+id/neighbour_info_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        app:cardBackgroundColor="@color/white"
        android:theme="@style/Base.CardView"
        app:cardCornerRadius="12dp"
        app:layout_constraintTop_toBottomOf="@+id/appbar"
        tools:layout_editor_absoluteX="16dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/white"
            android:gravity="start">

            <TextView
                android:id="@+id/neighbour_name_profil"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/neigbour_user_name"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <ImageButton
                android:id="@+id/neighbour_localisation_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/neighbour_name_profil"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:background="@color/white"
                android:tint="@color/colorAccent"
                android:src="@drawable/ic_place_black_24dp" />

            <TextView
                android:id="@+id/neighbour_localisation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/neighbour_name_profil"
                android:layout_margin="8dp"
                android:layout_toEndOf="@id/neighbour_localisation_icon"
                android:text="@string/neighbour_location"
                android:textSize="16sp" />

            <ImageButton
                android:id="@+id/neighbour_phone_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/neighbour_localisation_icon"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:background="@color/white"
                android:tint="@color/colorAccent"
                android:src="@drawable/ic_call_black_24dp" />

            <TextView
                android:id="@+id/neighbour_phone_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/neighbour_localisation_icon"
                android:layout_margin="8dp"
                android:layout_toEndOf="@id/neighbour_phone_icon"
                android:text="@string/neighbour_phone_number"
                android:textSize="16sp" />

            <ImageButton
                android:id="@+id/neighbour_external_link_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/neighbour_phone_icon"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:background="@color/white"
                android:tint="@color/colorAccent"
                android:src="@drawable/ic_language_black_24dp" />

            <TextView
                android:id="@+id/neighbour_external_link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/neighbour_phone_icon"
                android:layout_margin="8dp"
                android:layout_toEndOf="@id/neighbour_external_link_icon"
                android:text="@string/neighbour_external_link"
                android:textSize="16sp" />

        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
                android:id="@+id/neighbour_text_info_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                app:cardCornerRadius="12dp"
                android:theme="@style/Widget.MaterialComponents.CardView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/neighbour_info_card">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@color/white"
                    android:gravity="start">

                    <TextView
                        android:id="@+id/neighbour_info"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:text="@string/neighbour_about_text"
                        android:textColor="@color/black"
                        android:textSize="28sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/neighbour_info"
                        android:layout_margin="4dp"
                        android:text="Bonjour !Je souhaiterais faire de la marche nordique, Pas initiée, je cherche une ou plusieurs personnes susceptibles de m'accompagner !J'aime les jeux de cartes tels la belote et le tarot.."
                        android:textSize="14sp" />
                </RelativeLayout>
    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>
